hphp/test/slow/compilation/missing-constant.php.expectf
Fatal error: Class undefined: C1 in %s on line 4
